--- a/package.json
+++ b/package.json
@@ -14,15 +14,15 @@
     "name": "Bruno Jouhier"
   },
   "engines": {
-    "node": ">=0.10.8"
+    "node": ">=10.0.0"
   },
   "dependencies": {
-    "streamline-runtime": "^1.0.13"
+    "streamline-runtime": "^2.0.1"
   },
   "devDependencies": {
-    "babel-plugin-streamline": "^2.0.0",
-    "babel-preset-es2015": "^6.3.13",
-    "streamline-helpers": "^2.0.0"
+    "babel-plugin-streamline": "^2.0.26",
+    "babel-preset-es2015": "^6.24.1",
+    "streamline-helpers": "4.0.0"
   },
   "scripts": {
     "prepublish": "node build.js || nodejs build.js",
